// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> loaded game matches snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#40BAFF",
          "borderRadius": 100,
          "display": "flex",
          "height": 28,
          "justifyContent": "center",
          "left": 20,
          "opacity": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
          "top": 60,
          "width": 28,
        }
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "Raleway_400Regular",
          "fontSize": 24,
        }
      }
    >
      Link the two words
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3F3F3",
          "display": "flex",
          "height": 174,
          "justifyContent": "space-between",
          "margin": 24,
          "padding": 15,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
          "width": 200,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "display": "flex",
              "height": 60,
              "justifyContent": "center",
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
              "width": 180,
            },
            Object {
              "backgroundColor": "#FF9C40",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "Raleway_400Regular",
              "fontSize": 18,
            }
          }
        >
          FORTY
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "display": "flex",
              "height": 60,
              "justifyContent": "center",
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
              "width": 180,
            },
            Object {
              "backgroundColor": "#40BAFF",
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "Raleway_400Regular",
              "fontSize": 18,
            }
          }
        >
          FIFTY
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FF9C40",
          "borderRadius": 5,
          "display": "flex",
          "height": 76,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
          "width": 175,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Raleway_400Regular",
            "fontSize": 18,
          }
        }
      >
        START
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Game /> matches snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#40BAFF",
        "borderRadius": 100,
        "display": "flex",
        "height": 28,
        "justifyContent": "center",
        "left": 20,
        "opacity": 1,
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "top": 60,
        "width": 28,
      }
    }
  />
</View>
`;
